to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.12 (In Progress)
============================
05/22/2002: cheetah (William Fulton)
            [Java] C type char no longer maps to Java type byte, but to Java type char.
            It is now treated as a character rather than a signed number. This fits in
            with the other language modules and is a more natural mapping as char* is 
            mapped as a string of characters. Note that the C signed char type is still
            mapped to a Java byte.

            *** POTENTIAL INCOMPATIBILITY FOR JAVA MODULE ***

05/22/2002: cheetah (William Fulton)
            [Java] Improved constants wrapping. Constants (#define and %constant) values 
            are now obtained through a JNI call. Previously the value was compiled as 
            Java code, but this didn't work for all cases, eg #define 123ULL.

05/22/2002: beazley
            Fixed bogus error message with %extend directive and C++
            access specifiers.  Reported by Marcelo Matus.

05/22/2002: beazley
            Namespaces and enums now work correctly.  For example:

                namespace Foo {
                    enum Bar { A, B };
                }

            Bug reported by Marcelo Matus.

05/21/2002: beazley
            The %types directive can now be used to specify inheritance relationships
            in the runtime type system.  For example,

                %types(Foo = Bar);

            specifies that Foo isa Bar.    Using this is potentially quite dangerous.
            However, this is useful in certain cases (and in the SWIG library).
            
05/20/2002: beazley
            %nodefault and %makedefault directives now require a trailing semicolon.